Bug 128927 - ftp hang when CR and LF are split in onDataAvailable r=badami, sr=darin, a=dbaron